force-app/main/default/objects/Bio_Org_Wide_Custom_Config__mdt/Bio_Org_Wide_Custom_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bio Org Wide Custom Config</label>
    <pluralLabel>Bio Org Wide Custom Config</pluralLabel>
</CustomObject>