force-app/main/default/objects/Bio_Org_Wide_Custom_Config__mdt/fields/Child_Relataionship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Relataionship_Name__c</fullName>
    <description>Custom field used by the ND Address/Phone/Email preferred and current logic</description>
    <label>Child Relataionship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>