force-app/main/default/objects/Bio_Org_Wide_Custom_Config__mdt/fields/Disable_Multiple_Current_Types__c.field-meta.xml
<CustomField>
    <fullName>Disable_Multiple_Current_Types__c</fullName>
    <description>Custom field used by the ND Address/Phone/Email preferred and current logic</description>
    <inlineHelpText>separate by semicolon, make sure no space between each type</inlineHelpText>
    <label>Disable Multiple Current Types</label>
    <type>TextArea</type>
</CustomField>