force-app/main/default/objects/Bio_Org_Wide_Custom_Config__mdt/fields/Preferred_Order__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Order__c</fullName>
    <description>Custom field used by the MSU Address/Phone/Email preferred and current logic</description>
    <inlineHelpText>separate by semicolon, make sure no space between each type</inlineHelpText>
    <label>Preferred Order</label>
    <type>TextArea</type>
</CustomField>