force-app/main/default/objects/Bio_Org_Wide_Custom_Config__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Disable_Multiple_Current_Types__c</columns>
    <columns>Preferred_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
    <language>en_US</language>
</ListView>